# coro

./: .gitignore  CMakeLists.txt  main.cpp  share_task.hpp
include/: any.h  awaitable_traits.h  cancel_request.h  cancellable_awaiter.hpp  cancellation_task.hpp  fmap.h  get_awaiter.h  is_awaitable.h  is_awaitable_cancelable.h  is_awaiter.h  macro.h  sync_task.hpp  task.hpp  unwrap_reference.h  void_value.h  when_all.h  when_all_counter.h  when_all_ready_awaitable.hpp  when_all_ready_task.h  when_all_task.h  when_any_awaitable.hpp  when_any_counter.h  when_any_counter.hpp  when_any_ready_awaitable.hpp  when_any_ready_task.h  when_any_task.h
proto/: CMakeLists.txt
proto/proto/: addressbook.proto
src/: CMakeLists.txt  awiterall.cpp  cancel.cpp  when_all_multi_level.cpp  when_all_task.h  when_any_all_test.cpp  when_any_test.cpp
src/grpctest/client/: CMakeLists.txt  client_async.cpp  main.cpp
src/grpctest/server/: CMakeLists.txt  main.cpp
